# schoolccb

./: .env.example  .gitignore  API_ENDPOINTS.md  AUDITORIA_MARZO_2026.md  CAMBIOS_MARZO_2026.md  Dockerfile.backend  Dockerfile.frontend  FINAL_STATUS.md  IA_ML_STATUS.md  IMPLEMENTACION_BILLING.md  IMPLEMENTACION_MASIVA.md  KPI_STATUS.md  LICENSE  MODULOS_PREMIUM.md  OPTIMIZACIONES.md  README.md  ROADMAP.md  SEGURIDAD.md  SETUP_PRODUCCION.md  create-root-user.sh  docker-compose.yml  init-ssl.sh  init.sql  nginx.conf  setup.sh
.github/: copilot-instructions.md
.github/workflows/: backend.yml  frontend.yml
docs/: README.md
frontend/: .env.example  Dockerfile.frontend  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vitest.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  App.jsx  Billing.jsx  BrandingConfig.jsx  BulkImport.jsx  Forms.jsx  LanguageSwitcher.jsx  Login.jsx  Modal.jsx  api.js  i18n.js  index.css
frontend/src/components/: Announcements.jsx  Notifications.jsx
frontend/src/locales/: en.json  es.json
nginx/: nginx.conf  nginx.prod.conf
postgres/: Dockerfile.postgres
rust/: .dockerignore  Cargo.toml  Dockerfile  nohup.out
rust/migrations/: 20260308000000_initial_schema.sql  20260308000001_rbac_and_academic.sql  20260308000002_grades_system.sql  20260308000003_periods_and_attendance.sql  20260308000004_saas_enterprise_layer.sql  20260308000005_branding_and_personalization.sql  20260309000000_add_america_europe_countries.sql  20260309000001_unique_school_license.sql  20260311000000_add_indexes_and_foreign_keys.sql  20260311000001_update_saas_licenses.sql  20260312000000_platform_settings.sql  20260312000001_remove_default_school.sql  20260312000002_add_school_details.sql  20260313000000_add_indexes_and_audit_logs.sql  20260320000000_communications_module.sql  20260325000000_security_and_audit.sql  20260330000000_finance_module.sql  20260330000001_add_is_system_to_roles.sql  20260330000002_add_resource_action_to_permissions.sql  20260331000000_seed_initial_data.sql
rust/src/: ai_module.rs  auth.rs  auth_tests.rs  communications_repository.rs  config.rs  email.rs  email_queue.rs  features.rs  finance_repository.rs  handlers.rs  lib.rs  main.rs  models.rs  pdf_generator.rs  repository.rs  security_repository.rs
scripts/: create-admin.sh  generate-secrets.sh
scripts/init-db/: init.sql
src/backend/: Cargo.toml
