[package]
name = "colegio-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "rust_decimal"] }

# CSV handling
csv = "1.3"
actix-multipart = "0.7"

# Decimal numbers
rust_decimal = { version = "1", features = ["serde-float"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Stripe (opcional - para producción)
# stripe = { version = "0.22", optional = true }

# Environment
dotenvy = "0.15"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-log = "0.2"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
jsonwebtoken = "9"
strum = "0.26"
strum_macros = "0.26"

# Redis (opcional, para caching)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

[dev-dependencies]
actix-rt = "2"
tokio-test = "0.4"

[features]
default = []
redis-cache = ["redis"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
