[package]
name = "colegio-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"
actix-web-actors = "4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "rust_decimal"] }

# CSV handling
csv = "1.3"
actix-multipart = "0.7"

# Decimal numbers
rust_decimal = { version = "1", features = ["serde-float"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Environment
dotenvy = "0.15"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-log = "0.2"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
jsonwebtoken = "9"
strum = "0.26"
strum_macros = "0.26"
validator = { version = "0.18", features = ["derive"] }
base32 = "0.4"
rand = "0.8"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
# NOTA: Para PDFs en producción, agregar:
# printpdf = "0.6"  o  lopdf = "0.32"

# Redis (para caching y colas de notificaciones)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
actix-rt = "2"
tokio-test = "0.4"

[features]
default = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
