[package]
name = "colegio-backend"
version = "0.1.0"
edition = "2024" # Rust Edition 2024 (si está disponible) o usar latest

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
postgres = "0.19"
r2d2 = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
actix-rt = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
